--- a/Simsimi/app/src/main/res/layout/list_item_message_send.xml
+++ b/Simsimi/app/src/main/res/layout/list_item_message_send.xml
@@ -4,24 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:id="@+id/simsimi_image"
-        android:src="@drawable/simsimi"/>
+
 
     <com.github.library.bubbleview.BubbleTextView
         android:id="@+id/text_message"
         android:padding="10dp"
         android:textColor="#FFF"
+        android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="25dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginTop="23dp" />
+        app:arrowWidth="8dp"
+        app:angle="8dp"
+        app:arrowHeight="10dp"
+        app:arrowPosition="14dp"
+        app:arrowLocation="right"
+        app:arrowCenter="true"
+        app:bubbleColor="#7EC0EE"
+
+        />
+
 
 </RelativeLayout>
